--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.73.2",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-snackbar": "^2.6.2",
     "yup": "^1.3.3"
   },
   "devDependencies": {
