--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/react-native-vector-icons": "^6.4.18",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-snackbar": "^2.6.2",
+    "react-native-vector-icons": "^10.0.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
