--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "formik": "^2.4.5",
     "react": "18.2.0",
@@ -17,6 +18,7 @@
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-snackbar": "^2.6.2",
+    "react-native-track-player": "^4.0.1",
     "react-native-vector-icons": "^10.0.3",
     "yup": "^1.3.3"
   },
